--- a/configclient.yml
+++ b/configclient.yml
@@ -3,3 +3,9 @@ spring:
       name: CONFIGCLIENT
 server:
   port: 8888  
+rabbitmq:
+  host: 192.168.181.10
+  port: 5672
+  username: ems
+  password: ems
+  virtual-host: 15672
