--- a/configclient.yml
+++ b/configclient.yml
@@ -6,6 +6,6 @@ server:
 rabbitmq:
   host: 192.168.181.10
   port: 5672
-  username: ems
-  password: ems
+  username: guest
+  password: guest
   virtual-host: 15672
